Temporary hack to fix telemetry_perf_unittests flakes.

While asvitkine@ works on proper fix.

BUG=635255

Review-Url: https://codereview.chromium.org/2236383002
Cr-Commit-Position: refs/heads/master@{#411336}

Former-commit-id: 18e3366f1863eb3a9f7a19211e184acc2f501e06